# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
.qwen/: settings.json
backend/src/lms_backend/routers/: items.py
lab/tasks/required/: task-2.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  server.py  settings.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/cron/: jobs.json
nanobot/workspace/memory/: HISTORY.md
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
